Small spacing fixes

--- a/kus-uslugi/src/styles/cat_info.css
+++ b/kus-uslugi/src/styles/cat_info.css
@@ -98,7 +98,7 @@
     grid-area: desc;
     margin: 10px 30px 10px 0;
     overflow: auto;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 
 @media (max-width: 450px) {
