--- a/kus-uslugi/src/styles/greetings.css
+++ b/kus-uslugi/src/styles/greetings.css
@@ -45,12 +45,6 @@
     z-index: 400;
 }
 
-
-
-.circles {
-    position: absolute;
-}
-
 .particles-container {
     position: absolute;
     padding: 0;
