--- a/kus-uslugi/src/styles/header.css
+++ b/kus-uslugi/src/styles/header.css
@@ -1,14 +1,30 @@
-@media (max-width: 450px) and (orientation: portrait) {
-    header .kus, header .uslugi {
-        visibility: hidden;
-    }
-}
-
 .logo-img {
     height: 3em;
     width: 3em;
     margin-right: 10px;
     justify-content: center;
+}
+
+.logo-img-small {
+    display: none;
+}
+
+@media (max-width: 450px) and (orientation: portrait) {
+    header .kus, header .uslugi {
+        visibility: hidden;
+    }
+
+    .logo-img-small {
+        display: flex;
+        height: 3em;
+        width: 3em;
+        margin-right: 10px;
+        justify-content: center;
+    }
+
+    .logo-img {
+        display: none;
+    }
 }
 
 .title-div {
@@ -20,7 +36,6 @@
 
 .header, .header-hidden {
     z-index: 800;
-    display: flex;
     height: 4em;
     border-bottom: #dcdcdc 1px solid;
     background-color: rgba(255, 255, 255, 0.72);
@@ -33,6 +48,9 @@
     width: 100vw;
 
     transition: top 1000ms ease 0ms;
+
+    display: flex;
+
 }
 
 .header-hidden {
@@ -41,6 +59,10 @@
 
 .header.dark, .header-hidden.dark {
     background-color: rgba(45, 45, 45, 0.72);
+}
+
+.header-button-container {
+
 }
 
 @keyframes header-show {
